--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,13 @@
 	"routes": [
 		{
 			"src": "/api/hello",
-			"dest": "main.Handler"
+			"dest": "main"
+		}
+	],
+	"alias": [
+		{
+			"source": "/api/hello",
+			"destination": "/api/hello"
 		}
 	]
 }
