--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "api/hello/main.go",
+			"src": "main.go",
 			"use": "@vercel/go"
 		}
 	],
 	"routes": [
 		{
-			"src": "/api/hello",
-			"dest": "api/hello/main.go"
+			"src": "/(.*)",
+			"dest": "main.go"
 		}
 	]
 }
